Customize for ENGIE

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ Third Party/MetroFramework/MetroFramework.Design/bin
 Third Party/MetroFramework/MetroFramework.Design/obj
 Third Party/MetroFramework/MetroFramework/bin
 Third Party/MetroFramework/MetroFramework/obj
+/Net4.5/WinAuth
+/Net4.5
