--- a/WinAuth/packages.WinAuth.config
+++ b/WinAuth/packages.WinAuth.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.7.0" targetFramework="net45" />
+  <package id="Costura.Fody" version="3.3.3" targetFramework="net45" />
+  <package id="Fody" version="5.0.0-beta.11" targetFramework="net45" developmentDependency="true" />
   <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net45" />
   <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net45" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net45" />
